--- a/client/.stylelintrc
+++ b/client/.stylelintrc
@@ -1,5 +1,5 @@
 {
-  "extends": "stylelint-config-standard",
+  "extends": "./entry/node_modules/stylelint-config-standard",
   "rules": {
     "no-descending-specificity": null,
     "string-quotes": "single",
