--- a/server/package.json
+++ b/server/package.json
@@ -41,13 +41,13 @@
     "redis": "^2.8.0",
     "request-ip": "^2.0.2",
     "sqlite3": "^3.1.13",
-    "typeorm": "^0.2.0-alpha.17"
+    "typeorm": "^0.1.12"
   },
   "devDependencies": {
     "eslint": "^4.17.0",
     "nodeinstall": "^0.1.3",
     "precommit-hook": "^3.0.0",
-    "uglify-es": "^3.1.6"
+    "uglify-es": "^3.3.10"
   },
   "pre-commit": [
     "lint"
