--- a/server/package.json
+++ b/server/package.json
@@ -5,47 +5,35 @@
   "main": "index.js",
   "scripts": {
     "build": "node ./script/build.js",
-    "dev": "pm2 kill && pm2 start ecosystem.config.js --only dev --no-daemon",
-    "start": "pm2 start ecosystem.config.js --only app",
-    "pm:restart": "pm2 restart app",
-    "pm:kill": "pm2 kill",
-    "pm:logs": "pm2 logs",
-    "pm:ls": "pm2 ls",
-    "pm:logrotate": "npm run pm:install-logrotate && npm run pm:config-logrotate",
-    "pm:install-logrotate": "pm2 install pm2-logrotate",
-    "pm:config-logrotate": "pm2 set pm2-logrotate:compress true && node ./node_modules/pm2/bin/pm2 set pm2-logrotate:retain 380",
+    "dev": "pm2 kill && pm2 start ecosystem.config.js --only dev__hansight-ux-server --no-daemon",
     "db:sync": "SYNC_SCHEMA=true NODE_ENV=production node app/index.js",
     "db:sync-dev": "SYNC_SCHEMA=true NODE_ENV=development node app/index.js",
-    "postinstall": "npm run pm:logrotate && npm run pm:kill",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --fix ./app",
-    "validate": "npm ls",
-    "nodeinstall": "nodeinstall --china ^8.4.0"
+    "validate": "npm ls"
   },
   "author": "Yuhang Ge",
   "license": "ISC",
   "dependencies": {
-    "bson": "^1.0.4",
-    "co-body": "^5.1.1",
-    "joi": "^13.1.2",
-    "js-yaml": "^3.10.0",
-    "koa": "^2.3.0",
+    "bson": "^2.0.6",
+    "co-body": "^5.2.0",
+    "generate-password": "^1.4.0",
+    "joi": "^13.2.0",
+    "js-yaml": "^3.11.0",
+    "koa": "^2.5.1",
     "koa-router": "^7.4.0",
     "koa-session": "^5.5.0",
-    "lodash": "^4.17.5",
-    "mime-types": "^2.1.17",
-    "mongodb": "^3.0.2",
-    "mysql2": "^1.5.2",
-    "pm2": "^2.7.2",
-    "pm2-logrotate": "^2.3.0",
+    "lodash": "^4.17.10",
+    "mime-types": "^2.1.18",
+    "mysql2": "^1.5.3",
+    "pm2": "^2.10.3",
     "redis": "^2.8.0",
     "request-ip": "^2.0.2",
-    "sqlite3": "^3.1.13",
-    "typeorm": "^0.1.12"
+    "sqlite3": "^4.0.0",
+    "typeorm": "^0.2.4"
   },
   "devDependencies": {
-    "eslint": "^4.17.0",
-    "nodeinstall": "^0.1.3",
+    "eslint": "^4.19.1",
     "precommit-hook": "^3.0.0",
     "uglify-es": "^3.3.10"
   },
