--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "dev": "node ./entry/bin/pentagon.js dev",
     "build": "node ./entry/bin/pentagon.js build",
     "lint": "node ./entry/bin/pentagon.js lint",
-    "cmd": "node ./entry/bin/pentagon.js",    
+    "cmd": "node ./entry/bin/pentagon.js",
     "validate": "npm ls"
   },
   "repository": {
@@ -26,7 +26,9 @@
     "lint"
   ],
   "devDependencies": {
-    "precommit-hook": "^3.0.0"
+    "eslint": "^4.19.1",
+    "precommit-hook": "^3.0.0",
+    "stylelint-config-standard": "^18.2.0"
   },
   "dependencies": {}
 }
